# ExPC_VisualMemory

./: .gitignore  README.md  pyproject.toml  visual-memory-mcp.spec  visual-memory.spec
.claude/: launch.json
benchmarks/: queries.example.json
docs/: FIRST_RUN.md  MCP_SETUP.md
scripts/: benchmark_50k.py  benchmark_gpu.ps1  benchmark_ocr.py  build_release.ps1  evaluate_search.py  make_ocr_smoke_dataset.py  normalize_existing_ocr.py  prefetch_models.py  pyinstaller_entry.py  pyinstaller_mcp_entry.py  run_gpu.ps1  setup_gpu.ps1  smoke_frozen.py  smoke_mcp_client.py  smoke_ocr_worker.py  verify_offline_models.py
src/visual_memory/: __init__.py  ai.py  api.py  capture.py  cli.py  config.py  db.py  imaging.py  mcp_server.py  ocr_worker.py  packs.py  processing.py  search.py  service.py  stitching.py  storage.py  textnorm.py
src/visual_memory/static/: app.css  app.js
src/visual_memory/templates/: index.html
tests/: conftest.py  test_ai.py  test_api.py  test_capture.py  test_cli.py  test_config_db.py  test_mcp.py  test_packs.py  test_processing.py  test_retention.py  test_search.py  test_service.py  test_stitching.py  test_storage.py  test_textnorm.py
