[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "external-pc-visual-memory"
version = "0.2.2"
description = "Local-first searchable visual memory for an external PC capture feed"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.32,<1",
  "jinja2>=3.1,<4",
  "python-multipart>=0.0.18,<1",
  "pillow>=10.4,<13",
  "numpy>=2.0,<3",
  "opencv-python-headless>=4.10,<5",
  "mcp>=1.12,<2",
]

[project.optional-dependencies]
ai = [
  "paddleocr>=3.0,<4",
  "paddlepaddle>=3.0,<4",
  "sentence-transformers>=5.0,<6",
]
yomitoku = ["yomitoku==0.13.0"]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8.3,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.8,<1",
]
build = ["pyinstaller>=6.11,<7"]

[project.scripts]
visual-memory = "visual_memory.cli:main"
visual-memory-mcp = "visual_memory.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
visual_memory = ["templates/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 110
exclude = [".venv", ".venv-*", "work", "outputs"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
